# tic_tac_toe

./: .gitignore  README.md  ai_player.py  game_logic.py  noxfile.py  project.py  pyproject.toml  requirements.txt  test_project.py
.github/workflows/: ci.yml
assets/: main.css
src/: ai_player.py  game_logic.py  project.py
tests/: test_ai_player.py  test_game_logic.py  test_project.py
