# Source: https://toml.io/en/

[tool.poetry]
name = "tic-tac-toe"
version = "0.1.0"
description = "An unbeatable Tic-Tac-Toe TUI game powered by the Minimax algorithm and built with Textual."
authors = ["Ilya Sobolev <ilyasobolev750@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1" 
textual = "^0.58.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
nox = "^2024.3.2"
black = "^24.4.2"
flake8 = "^7.0.0"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"